fehler minor korre

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,12 +1,13 @@
 
 {{ define "main"}}
 
-	{{ if .Params.showAlert }}
+	{{ if .Params.showAlertShopBisher }}
 	<div class="alert alert-warning alert-dismissible fade show" role="alert">
-	  <h4 class="alert-heading">
+	  <h6 class="alert-heading">
 		Bisheriger Shop bei  
 	 	<a target="_blank" href="https://sabine.wazala.com/products">Wazala</a>
-	  </h4>
+	 	sollte abgelöst werden...
+	  </h6>
 	  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 	{{ end }}
