--- a/layouts/partials/css.html
+++ b/layouts/partials/css.html
@@ -4,7 +4,7 @@
   {{ $options := dict "enableSourceMap" false "outputStyle" "compressed" }}
   {{ end }}
   {{ $styles := resources.Get "scss/main.scss" }}
-  {{ $styles = $styles | resources.ToCSS $options }}
+  {{ $styles = $styles | css.Sass $options }}
   {{ if hugo.IsProduction }}
   {{ $styles = $styles | fingerprint }}
   {{ end }}
