--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -12,7 +12,7 @@
   {{ markdownify (emojify .Content) }}
   <div class="container mb-3">
     <div class="row">
-    {{ range .Pages }}
+    {{ range .Pages.ByWeight }}
       <!--h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2-->
       <div class="col mb-2">
         <div class="card text-bg-light" style="max-width: 20rem;">
