versuch mit button/links kauf kompetenz-karten

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -20,7 +20,7 @@
           <div class="card-body">
             <h5 class="card-title">{{.Title}}</h5>
             <p class="card-text">{{markdownify .Params.cardtext}}</p>
-            <a href="{{ .RelPermalink }}" class="btn btn-sm btn-primary">Details...</a>
+            <a href="{{ .RelPermalink }}" class="btn btn-sm btn-primary">Kaufen...</a>
           </div>
         </div>
       </div>
