moeglichst allen text von wazala uebertragen...

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -3,6 +3,6 @@
     <a  href="https://www.creathera.ch" target="_blank">Link zu Creathera</a>
   </span>
   <span class="d-md-inline-block text-muted">&nbsp;</span>
-  <span class="d-lg-inline-block text-muted">Versandkosten für CH gültig</span>
+  <span class="d-lg-inline-block text-muted">&nbsp;</span>
   <span class="d-xl-inline-block text-muted">&nbsp;</span>
 </div>
