--- a/layouts/paypalJsJDK/paypalJsJDK.html
+++ b/layouts/paypalJsJDK/paypalJsJDK.html
@@ -1,10 +1,13 @@
+
+
+
 {{ define "main" }}
 {{ markdownify (emojify .Content) }}
 
 
 <h5>hier folgt inhalt von html-file > > ></h5>
 
-<div id="paypal-button-container">id </div>
+<div id="paypal-button-container"></div>
 
 <hr />
 
@@ -28,4 +31,21 @@ paypal.Buttons({
 }).render('#paypal-button-container');
 </script>
 
+<div class="container">
+<p class="d-inline-flex gap-1">
+  <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Link with href
+  </a>
+  <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+    Button with data-bs-target
+  </button>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body">
+    Some placeholder content for the collapse component. This panel is hidden by default but revealed when the user activates the relevant trigger.
+  </div>
+</div>
+ </div>
+
 {{ end }}
+
