produkte aktivierbar machen, spez.dev-üprodukt

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -13,17 +13,19 @@
   <div class="container mb-3">
     <div class="row">
     {{ range .Pages.ByWeight }}
-      <!--h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2-->
-      <div class="col mb-2">
-        <div class="card text-bg-light" style="max-width: 20rem;">
-          <img src="{{ .Params.image }}" class="img-top" alt="portrait" >
-          <div class="card-body">
-            <h5 class="card-title">{{.Title}}</h5>
-            <p class="card-text">{{markdownify .Params.cardtext}}</p>
-            <a href="{{ .RelPermalink }}" class="btn btn-sm btn-primary">Details...</a>
+      {{ if .Params.isActive }}
+        <!--h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2-->
+        <div class="col mb-2">
+          <div class="card text-bg-light" style="max-width: 20rem;">
+            <img src="{{ .Params.image }}" class="img-top" alt="portrait" >
+            <div class="card-body">
+              <h5 class="card-title">{{.Title}}</h5>
+              <p class="card-text">{{markdownify .Params.cardtext}}</p>
+              <a href="{{ .RelPermalink }}" class="btn btn-sm btn-primary">Details...</a>
+            </div>
           </div>
         </div>
-      </div>
+      {{ end }}
     {{ end }}
     </div>
   </div>
