--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,7 +13,7 @@
 	{{ end }}
 
 	<figure class="figure w-100">
-	  {{ $bgsrc := resources.Get "images/titelbild-creathera-shop.png" }}
+	  {{ $bgsrc := resources.Get "images/titelbild-creathera-shop.jpg" }}
 	  {{ $bgsrc := $bgsrc.Crop "1200x350 Center" }}  
 	  <img  src="{{ $bgsrc.RelPermalink }}" 
 	  		class="figure-img img-fluid w-100" 
