--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="footer text-emphasis-secondary p-3"  style="background-color: AliceBlue;">
   <span class="d-sm-inline-block shoplinkcolor ">
-    <a  href="https://www.creathera.ch" target="_blank">Link zu Creathera</a>
+    <a  href="https://www.creathera.ch" target="_blank">Creathera-Web</a>
   </span>
   <span class="d-md-inline-block text-muted">&nbsp;</span>
   <span class="d-lg-inline-block text-muted">&nbsp;</span>
