--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,12 +1,10 @@
 
 {{ define "main"}}
 
-	{{ if .Params.showAlertShopBisher }}
+	{{ if .Params.showAlertMsg }}
 	<div class="alert alert-warning alert-dismissible fade show" role="alert">
 	  <h6 class="alert-heading">
-		Bisheriger Shop bei  
-	 	<a target="_blank" href="https://sabine.wazala.com/products">Wazala</a>
-	 	sollte abgelöst werden...
+		Dieser Shop dient nur zu Test-Zwecken !!!
 	  </h6>
 	  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
@@ -14,7 +12,7 @@
 
 	<figure class="figure w-100">
 	  {{ $bgsrc := resources.Get "images/titelbild-creathera-shop.jpg" }}
-	  {{ $bgsrc := $bgsrc.Crop "1200x350 Center" }}  
+	  {{ $bgsrc := $bgsrc.Crop "1200x150 Center" }}  
 	  <img  src="{{ $bgsrc.RelPermalink }}" 
 	  		class="figure-img img-fluid w-100" 
 	  		alt="bg">
