meta-daten anpassen (test/dev)

--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -2,12 +2,12 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" 
-    content="Creathera Bern, lösungs- unt ressourcenorientierte Arbeit mit Kindern" />
+    content="Test-Shop am Bsp. Creathera" />
 <meta property="og:title" 
-    content="Creathera Bern" />
+    content="hpsof" />
 <meta property="og:type" 
     content="Lösungs- und ressourcenorientiertes Arbeitsmodell" />
 <meta property="og:url" 
-    content="creathera.ch" />
+    content="shoptest.creathera.ch" />
 <meta property="og:description" 
-    content="Dr.med. Ursula Bühlman-Stähli | Dr.med. Sabine Zehnder Schlapbach | Regula Flury-Wahlen, dipl. Logopädin" />
+    content="hpsof" />
