--- a/layouts/partials/subfooter.html
+++ b/layouts/partials/subfooter.html
@@ -1,7 +1,7 @@
 <div class="footer text-emphasis p-3" style="background-color: LightGray;">
   {{ with site.Params.git.last_commit }}
   <div class="d-block" style="color:rgba(20, 0, 0, 0.3); font-size: smaller;">
-    &copy;Creathera 2023, Bern | Rev.{{ .hash }} : {{ substr .date 0 10 }}
+    &copy;hpsof | Rev.{{ .hash }} : {{ substr .date 0 10 }}
   {{ else }}
     &nbsp;
   {{ end }}
