--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,7 @@
     <h3>{{ . }}</h3>
   {{ end }}
   {{ with .Params.description }}
-    <p>{{ . }}</p>
+    <p>{{ markdownify ( . ) }}</p>
   {{ end }}
   {{ with or .Params.url .Params.details }}
     <hr>
