--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -8,7 +8,7 @@
       <img src="{{ $logosrc.RelPermalink }}" 
            height="42" 
            class="d-inline-block align-text-top" 
-           alt="logo"><b>SHOP</b>
+           alt="logo"><b>SHOP-Test</b>
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
       <span class="navbar-toggler-icon"></span>
